--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="nav" tabindex="-1" onclick="this.focus()">
+  <div class="container">
+    <a class="pagename current" href="#">TV Maze</a>
+    <a href="#">Shows</a>
+  </div>
+</nav>
+<button class="btn-close btn btn-sm">×</button>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
